# wheel-of-life

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs  models.rs
src/components/: ActionItemCard.tsx  ActionItemForm.tsx  ConfirmDialog.tsx  LifeAreaCard.tsx  LifeAreaForm.tsx  LifeWheel.tsx  ScoreForm.tsx  ScoreHistoryChart.tsx
src/components/ActionItems/: ActionItemCard.tsx  ActionItemForm.tsx  ActionItemModal.tsx  ConfirmArchiveDialog.tsx  ExpandedItemModal.tsx  Panel.tsx  PostItCard.tsx
src/components/History/: AreaSelectionSection.tsx  EmptyState.tsx  HistoryPageHeader.tsx  ScoreChartSection.tsx  ScoreList.tsx
src/components/LifeAreaDetail/: ActionItemsSection.tsx  CurrentScoreSection.tsx  DetailPageHeader.tsx  ScoreHistorySection.tsx
src/components/LifeAreas/: LifeAreaCard.tsx  LifeAreaForm.tsx  LifeAreaFormModal.tsx
src/components/LifeAreasManagement/: ActiveAreasSection.tsx  ArchivedAreasSection.tsx  LifeAreaCardWithActions.tsx  ManagementPageHeader.tsx
src/components/Scores/: ScoreForm.tsx  ScoreHistoryChart.tsx
src/components/common/: ConfirmDialog.tsx
src/hooks/: useActionItemsManager.ts
src/lib/: hooks.ts  utils.ts
src/pages/: HistoryPage.tsx  HomePage.tsx  LifeAreaDetailPage.tsx  LifeAreasManagementPage.tsx
