[package]
name = "roda-da-vida"
version = "0.1.0"
description = "Life Wheel desktop application"
authors = ["Felipe Santos"]
edition = "2021"

[lib]
name = "roda_da_vida_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = "0.4"
dirs = "5"

